# continuous-cot-rl

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: Untitled-1.ipynb  combination.ipynb  create_dataset.ipynb
scripts/: train_qwen_countdown.bash
src/: grpo_trainer.py  load_data.py  main.py  rewards.py  trainer.py  utils.py
src/continuous_cot_rl/: __init__.py
src/countdown_task/: dataset_countdown.py  train_countdown.py
