[project]
name = "continuous-cot-rl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ShinnosukeUesaka", email = "45286939+ShinnosukeUesaka@users.noreply.github.com" }
]
dependencies = [
    "trl>=0.15.0",
    "jupyterlab>=4.3.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/continuous_cot_rl"]
